# openframeworks-starter

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  Doxyfile  Makefile  README.md  addons.make  config.make  mkdocs.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-multi-os.yml  build.yml  release.yml
docs/: project_structure.md  setup.md
src/: main.cpp  ofApp.cpp  ofApp.h
